--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
         <div>
             {% if is_granted("ROLE_USER") %}
                 Hi {{ app.user.username }} | <a href="{{ path("_security_logout") }}">Logout</a>
+            {% elseif is_granted("IS_AUTHENTICATED_2FA_IN_PROGRESS") %}
+                Hi {{ app.user.username }}, please complete 2fa | <a href="{{ path("_security_logout") }}">Cancel</a>
             {% else %}
                 <a href="{{ path("_security_login") }}">Login</a>
             {% endif %}
