Display secret code

--- a/templates/members/index.html.twig
+++ b/templates/members/index.html.twig
@@ -3,4 +3,5 @@
 {% block body %}
     <h1>Welcome to Member's Area</h1>
     <p>This is a secured page, only accessible when 2fa has been completed</p>
+    <p>GA secret: {{ app.user.googleAuthenticatorSecret }}</p>
 {% endblock %}
