Add remember me

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,6 +18,9 @@
     <input type="hidden" name="_target_path" value="/account" />
     #}
 
+    <input type="checkbox" id="remember_me" name="_remember_me" checked/>
+    <label for="remember_me">Keep me logged in</label>
+
     <button type="submit">login</button>
 </form>
 {% endblock %}
